--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,3 @@
-@import '/main.css';
-@import "/null";
-@import '/variables';
+@import '/scss/main.css';
+@import "/scss/null";
+@import '/scss/variables';
